# mmu_tabulation_backend

./: .gitignore  .~lock.scores.csv#  Cargo.toml  README.md
docs/: crates.md  main.md
docs/mmu_csv/: candidates_rows.csv  categories_rows.csv  college_rows.csv  criterias_rows.csv  events_rows.csv  judges_rows.csv
src/: error.rs  main.rs
src/handlers/: auth.rs  candidate.rs  category.rs  college.rs  criteria.rs  event.rs  judge.rs  mod.rs  score.rs  tests.rs
src/web/: auth.rs  candidate.rs  category.rs  criteria.rs  event.rs  judge.rs  mod.rs  note.rs  score.rs
