[package]
name = "mmu_tabulation_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
# chrono = "0.4.28"
# tracing = "0.1.37"
# tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "chrono", "time"] }
