[package]
name = "mmu_tabulation_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.1", features = ["ws"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.34.0", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "time", "uuid"] }
# bigdecimal = "0.4.2"
futures = "0.3"
# futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
# tokio-tungstenite = "0.20"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["serde"] }
csv = "1.3.0"
# umya-spreadsheet = "1.0.3"
rust_xlsxwriter = "0.56.0"

[profile.release]
lto = true
